# FactorioSolver

./: factorioCombinators.cabal  stack.yaml
src/: FindMagic.hs  Main.hs
src/Factorio/: Anneal.hs  Combinators.hs  Recipies.hs  RecipiesBob.hs
